# ruffen-docs

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.rst  HISTORY.rst  README.rst  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: feature-request.yml  issue.yml
.github/workflows/: lint.yml  main.yml
src/blacken_docs/: __init__.py  __main__.py  constants.py  errors.py  formatters.py  regex_patterns.py
src/ruffen_docs/: __init__.py  __main__.py  constants.py  errors.py  formatters.py  processors.py  regex_patterns.py
tests/: test_blacken_docs.py  test_ruffen_docs.py
