[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77",
]

[project]
name = "ruffen-docs"
version = "0.0.1"
description = "Run ruff on Python code blocks in documentation files."
readme = "README.rst"
license = "MIT"
license-files = [ "LICENSE" ]
maintainers = [
    { name = "Ülgen Sarıkavak", email = "placeholder@example.com" },
]
authors = [
    { name = "Ülgen Sarıkavak", email = "placeholder@example.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Typing :: Typed",
]
dependencies = [
    "black>=22.1",
    # Earliest version Python 3.14 support
    # https://github.com/astral-sh/ruff/releases/tag/0.14.1
    "ruff>=0.14.1",
]
urls.Changelog = "https://github.com/ulgens/ruffen-docs/blob/main/CHANGELOG.rst"
urls.Repository = "https://github.com/ulgens/ruffen-docs"
scripts.blacken-docs = "ruffen_docs:run_black"
scripts.ruffen-docs-check = "ruffen_docs:run_check"
scripts.ruffen-docs-format = "ruffen_docs:run_format"

[dependency-groups]
test = [
    "black>=22.1",
    "coverage[toml]",
    "pytest",
    "pytest-cov",
    "pytest-randomly",
]

[tool.pyproject-fmt]
max_supported_python = "3.15"

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    """
xfail_strict = true

[tool.coverage.run]
branch = true
parallel = true
source = [
    "ruffen_docs",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
]

[tool.coverage.report]
show_missing = true

[tool.mypy]
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
mypy_path = "src/"
namespace_packages = false
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.rstcheck]
report_level = "ERROR"
